--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,25 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="navbar navbar-expand-sm navbar-light d-flex navbar-lewagon fixed-top">
+  <%= link_to "/fams", class: "navbar-brand" do %>
+  <%= image_tag "https://static.thenounproject.com/png/643659-200.png" %>
+  <% end %>
+  <div class="d-flex space-around">
+    <div class="link">
+      <%= link_to "Become a family", new_fam_path %>
+    </div>
+    <div class="link">
+      <%= link_to "Sign Up", new_user_registration_path %>
+    </div>
+    <div class="link">
+      <%= link_to "Log In", new_user_session_path%>
+    </div>
+  </div>
+</div>
+
+<div class="home" style="background-image: linear-gradient(to left, rgba(30,30, 30, 0.4),rgba(30,30, 30, 0.4)), url(https://images.unsplash.com/photo-1511895426328-dc8714191300?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)">
+  <div class="card-header ">
+      <h1>Become part of a family</h1>
+      <h4>Rent your family, feel at home and enjoy your new company</h4>
+  </div>
+</div>
+
