--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,21 @@
 // Specific CSS for your home-page
+.link {
+  padding-left: 24px;
+}
+
+a {
+  color: grey;
+}
+
+.home {
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  text-align: center;
+  color: white;
+}
+
+.card-header {
+  border-bottom: none;
+  padding-top: 240px;
+}
