--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <%= link_to "Dashboard", bookings_path %>
     </div>
     <div class="nav-link">
-      <%= link_to "Profile", profiles_path(current.user) %>
+      <%= link_to "Profile", profile_path(current_user) %>
     </div>
     <div class="nav-link">
       <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
