--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,6 +7,6 @@
 </ul>
 
 <%= link_to "Home", fams_path%>
-<%= link_to "Edit", edit_profile_path(@profile)%>
+<%= link_to "Edit", edit_user_registration_path(@profile)%>
 <%= link_to "New Fam", new_fam_path%>
 
