--- a/app/views/fams/show.html.erb
+++ b/app/views/fams/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Fams#show</h1>
-<p>Find me in app/views/fams/show.html.erb</p>
+<div class="container">
+  <div class="row">
+
+    <div class="images-card col-6 vh-100">
+      <%= @fam.photos %>
+    </div>
+
+    <div class="container-details col-6 vh-100 py-3">
+      <h1>Welcome to our page!</h1>
+      <h2>We are the <%= @fam.name %></h2>
+      <div class="card-details">
+       <p><i class="fas fa-users"></i> <%= @fam.members %> Family members</p>
+       <p><i class="fas fa-globe-americas"></i> <%= @fam.cultural_experience %></p>
+       <p><i class="fas fa-language"></i> we speek <%= @fam.language %></p>
+       <p><i class="fas fa-home"></i> we live in a <%= @fam.housing_type %></p>
+       <br>
+       <p><%= @fam.description %></p>
+     </div>
+     <%= link_to "Book you stay with us", new_fam_booking_path(@fam.id), class: "btn btn-flat" %>
+   </div>
+ </div>
+</div>
