--- a/app/views/fams/new.html.erb
+++ b/app/views/fams/new.html.erb
@@ -1,2 +1,44 @@
-<h1>Fams#new</h1>
-<p>Find me in app/views/fams/new.html.erb</p>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6 p-3 mt-4 bg-light shadow-sm">
+      <h2>Become a family!</h2>
+      <%= simple_form_for(@fam) do |f| %>
+      <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :name,
+        required: true,
+        autofocus: true%>
+        <%= f.input  :description,
+        required: true,
+        autofocus: true%>
+        <%= f.input :cultural_experience,
+        required: true,
+        autofocus: true%>
+        <%= f.input  :members,
+        required: true,
+        autofocus: true%>
+        <%= f.input :language, collection: User::LANGUAGES,
+        required: true,
+        autofocus: true%>
+        <%= f.input  :location,
+        required: true,
+        autofocus: true%>
+        <%= f.input :housing_type,
+        required: true,
+        autofocus: true%>
+        <%= f.input  :capacity,
+        required: true,
+        autofocus: true%>
+        <%= f.input :price,
+        required: true,
+        autofocus: true%>
+        <%= f.input :pictures, as: :file, input_html: { multiple: true }%>
+      </div>
+      <div class="btn btn-success" class="form-actions">
+        <%= f.button :submit , "Become a Family!" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
