--- a/app/views/fams/show.html.erb
+++ b/app/views/fams/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Fams#show</h1>
-<p>Find me in app/views/fams/show.html.erb</p>
+<h1><%= @fam.name %></h1>
+
+<ul>
+  <% @fam.pictures.each do |picture| %>
+    <!-- `picture` here is an instance of the Picture model -->
+    <li><%= cl_image_tag(picture.photo, width: 400, height: 300, crop: :fill) %></li>
+  <% end %>
+</ul>
+<%= @fam.description %>
+
+
