booking controller done

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
   <% if user_signed_in? %>
   <div class="d-flex space-around">
     <div class="nav-link">
-      <%= link_to "Dashboard", bookings_path %>
+      <%# link_to "Dashboard", bookings_path %>
     </div>
     <div class="nav-link">
       <%= link_to "Profile", profile_path(current_user) %>
