--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,7 +9,7 @@
 
 <%= link_to "Home", fams_path%>
 <% if policy(@profile).update? %>
-  <%= link_to "Edit", edit_profile_path%>
+  <%= link_to "Edit", edit_user_registration_path%>
   <%= link_to "New Fam", new_fam_path%>
 <% end %>
 
