--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,18 +10,39 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
-  </div>
+        <%= f.input :first_name,
+        required: true,
+        autofocus: true%>
+        <%= f.input    :last_name,
+        required: true,
+        autofocus: true%>
+        <%= f.input :language, collection: User::LANGUAGES,
+        required:false %>
+        <%= f.input  :description,
+        required:true,
+        autofocus:true %>
+        <%= f.input  :age,
+        required:true,
+        autofocus:true %>
+        <%= f.input  :nationality,
+        required:true,
+        autofocus:true %>
+        <%= f.input  :gender,
+        required:true,
+        autofocus:true %>
+        <%= f.input :email,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+        required: true,
+        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+        input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+        required: true,
+        input_html: { autocomplete: "new-password" } %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>  </div>
 
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
