Front End Navbar and homepage

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -12,3 +12,22 @@
   background: #385273;
   color: white;
 }
+
+.btn-pink {
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: #F2A095;
+  transition: background 0.3s ease;
+  margin-top: 10px;
+  height: 32px;
+  width: 80px;
+  padding: opx;
+  padding: 0px;
+  margin-left: 16px;
+}
+
+.btn-pink:hover {
+  background: #385273;
+  color: white;
+}
