--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  height: 45px;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -13,6 +14,7 @@
 
 .nav-link {
   padding-left: 24px;
+  font-size: 12px;
 }
 
 a {
