--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,9 @@
   <% if user_signed_in? %>
   <div class="d-flex space-around">
     <div class="nav-link">
+      <%= link_to "Become a family", new_fam_path %>
+    </div>
+    <div class="nav-link">
       <%= link_to "Dashboard", bookings_path %>
     </div>
     <div class="nav-link">
