frontend index - i gave it a try

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -3,7 +3,7 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1E2937;
+  background: $blue;
   transition: background 0.3s ease;
   margin-top: 10px;
 }
