--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,16 +1,7 @@
-.card {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
-  flex-grow: 1;
-  margin-top: 15px;
-  margin-right: 10px;
-  margin-left: 10px;
-  box-shadow: 0 2px 0px -2px rgba(0, 0, 0, 0.2), 0 3px 20px 0 rgba(0, 0, 0, 0.19);
-}
+// scss for the fams#show
 
 .container-details {
-  background-color: #F2A095;
+  background-color: $orange;
   text-align: center;
   color: white;
 }
@@ -22,4 +13,79 @@
   border-radius: 8px;
   color: black;
   text-align: left;
+}
+
+// scss fams#index
+.container-index {
+  background-color: $orange;
+  text-align: center;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
+.card-family {
+  overflow: hidden;
+  background: $white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card-family h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-family p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+
+.card-family .card-family-info {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+}
+
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .cards-families {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .cards-families {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .cards-families {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .cards-families {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .cards-families {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
