--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,12 @@
-// Define variables for your color scheme
+// Defined vairables for our color schema - jst
+
+$blue: #1E2937;
+$orange: #F2A095;
+
 
 // For example:
 $red: #FD1015;
-$blue: #167FFB;
 $yellow: #FFC65A;
-$orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
