--- a/app/views/fams/new.html.erb
+++ b/app/views/fams/new.html.erb
@@ -1,5 +1,5 @@
-
-<div class="container">
+<div class="family" style="background-image: url(https://images.pexels.com/photos/160994/family-outdoor-happy-happiness-160994.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500)"" >
+<div class = 'container' >
   <div class="row justify-content-center">
     <div class="col-6 p-3 mt-4 bg-light shadow-sm">
       <h2>Become a family!</h2>
@@ -41,4 +41,5 @@
       <% end %>
     </div>
   </div>
+</div>
 </div>
