--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,6 +31,7 @@
   width: 150px;
   border-radius: 10px;
   height: 24px;
+  border: 0.5px solid lightgrey;
 }
 
 a {
@@ -42,7 +43,7 @@ a {
   color: white;
   padding: 8px 24px;
   border-radius: 10px;
-  background: #F2A095;
+  background: #1E2937;
   transition: background 0.3s ease;
   margin: auto;
   height: 24px;
@@ -50,6 +51,7 @@ a {
   padding: opx;
   padding: 0px;
   margin-left: 3px;
+  border: 0.5px solid white;
 }
 
 .btn-search:hover {
