--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,3 +15,16 @@
 body {
   padding-top: 66px;
 }
+
+.field {
+  font-size: 12px;
+  margin-top: 30px;
+}
+
+.search-location {
+  width: 300px;
+  border-radius: 8px;
+  height: 28px;
+  padding: 8px;
+  border: 0.5px solid white;
+}
