fixed the index frontend

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -33,3 +33,23 @@
   background: #385273;
   color: white;
 }
+
+.btn-search{
+  color: white;
+  padding: 8px 24px;
+  border-radius: 10px;
+  background: #1E2937;
+  transition: background 0.3s ease;
+  margin: auto;
+  height: 24px;
+  width: 58px;
+  padding: opx;
+  padding: 0px;
+  margin-left: 3px;
+  border: 0.5px solid white;
+}
+
+.btn-search:hover {
+  background: #385273;
+  color: white;
+}
