--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -36,6 +36,12 @@
   border-radius: 8px;
 }
 
+.card-family-image {
+  height: 120px;
+  width: 100%;
+  object-fit: cover;
+}
+
 .card-family h2 {
   font-size: 16px;
   font-weight: bold;
