--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="home" style="background-image: /*linear-gradient(to right, rgba(42,41, 39, 0.5),rgba(42,41, 39, 0.4)),*/ url(https://images.unsplash.com/photo-1511895426328-dc8714191300?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)">
+<div class="home" style="background-image: /*linear-gradient(to right, rgba(42,41, 39, 0.5),rgba(42,41, 39, 0.4)),*/ url(<%= image_path('family_home.jpg') %>)">
   <div class="header ">
     <h1>Experience life in a family</h1>
     <h4>Rent your family, feel at home and enjoy your new company</h4>
