--- a/app/views/fams/index.html.erb
+++ b/app/views/fams/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class="container-index m-4">
   <h1>Find the perfect Family for you!</h1>
+  <h6>We found <%= @fams.length %> families to rent</h6>
   <div class="cards">
 
     <%# cl_image_tag image.photo, crop: :fill, class: "card-image"   %>
