--- a/app/views/fams/show.html.erb
+++ b/app/views/fams/show.html.erb
@@ -9,13 +9,13 @@
       </ul>
     </div>
 
-    <div class="container-details col-6 py-3">
-      <h1>Welcome to our page!</h1>
-      <h2>We are the <%= @fam.name %></h2>
+    <div class="container-details col-6 py-5">
+      <h1>We are the <%= @fam.name %></h1>
+      <h4>Come and stay with us!</h4>
       <div class="card-details">
        <p><i class="fas fa-users"></i> <%= @fam.members %> Family members</p>
        <p><i class="fas fa-globe-americas"></i> <%= @fam.cultural_experience %></p>
-       <p><i class="fas fa-language"></i> we speek <%= @fam.language %></p>
+       <p><i class="fas fa-language"></i> we speak <%= @fam.language %></p>
        <p><i class="fas fa-home"></i> we live in a <%= @fam.housing_type %></p>
        <br>
        <p><%= @fam.description %></p>
