CSS for all Forms

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,9 +17,10 @@
 
 // scss fams#index
 .container-index {
-  background-color: $orange;
   text-align: center;
   color: $blue;
+  background-color: $orange;
+  margin: 0px;
 }
 
 .cards {
