--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,8 @@
 @import "card";
 @import "familyform";
 @import "footer";
+@import "loginuser";
 @import "navbar";
-@import "signupform"
+@import "signupfamily";
+@import "signupuser";
 
