--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
-  <div class="footer">
+  <div class="footer fixed-bottom">
   <div class="footer-copyright">
     With <i class="fas fa-heart"></i> from Tel Aviv
   </div>
