--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,8 +34,16 @@
         required: true,
         autofocus: true,
         input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+        required: true,
+        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+        input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+        required: true,
+        input_html: { autocomplete: "new-password" } %>
         <%= f.input :photo %>
-        <%= f.input :photo_cache, as: :hidden %>  </div>
+        <%= f.input :photo_cache, as: :hidden %>
+  </div>
 
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
