--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -10,10 +10,51 @@
     <li class="list-group-item">Speaks: <%= @profile.language %></li>
   </ul>
   <div class="card-body">
-    <%= link_to "Home", fams_path, class: "card-link"%>
     <% if policy(@profile).update? %>
-      <%= link_to "Edit", edit_user_registration_path, class: "card-link"%>
-      <%= link_to "New Fam", new_fam_path, class: "card-link"%>
+      <%= link_to "Create Family", new_fam_path, class: "card-link btn btn-primary"%>
     <% end %>
   </div>
 </div>
+
+<h2>My Fams</h2>
+
+<% @profile.fams.each do |fam| %>
+  <div class="card" style="width: 30rem;">
+  <% fam.pictures.each do |picture| %>
+    <%= cl_image_tag picture.photo, class: "card-img-top" %>
+  <% end %>
+    <div class="card-body">
+      <h5 class="card-title"><%= fam.name %></h5>
+      <p class="card-text"><%= fam.description %></p>
+    </div>
+
+    <div class="card-body">
+      <% if policy(@profile).update? %>
+        <%= link_to "Show", fam_path(fam), class: "card-link btn btn-primary"%>
+        <%= link_to "Delete", fam_path(fam), method: :delete, class: "card-link btn btn-primary"%>
+      <% end %>
+    </div>
+  </div>
+<% end %>
+
+<h2>Bookings</h2>
+
+<% @profile.booked_families.each do |fam| %>
+  <div class="card" style="width: 30rem;">
+  <% fam.pictures.each do |picture| %>
+    <%= cl_image_tag picture.photo, class: "card-img-top" %>
+  <% end %>
+    <div class="card-body">
+      <h5 class="card-title"><%= fam.name %></h5>
+      <p class="card-text"><%= fam.description %></p>
+    </div>
+
+    <div class="card-body">
+      <% if policy(@profile).update? %>
+        <%= link_to "Show", fam_path(fam), class: "card-link btn btn-primary"%>
+        <%= link_to "Delete", fam_path(fam), method: :delete, class: "card-link btn btn-primary"%>
+      <% end %>
+    </div>
+  </div>
+<% end %>
+
