--- a/app/assets/stylesheets/components/_signupuser.scss
+++ b/app/assets/stylesheets/components/_signupuser.scss
@@ -12,7 +12,7 @@
 }
 
 .new-user {
-  background-image: url(family_sunset.jpg);
+  background-image: url(asset-path('family_sunset.jpg'));
   position: -webkit-sticky;
   position:sticky;
   top:0;
