booking confirmation page styling added

--- a/app/views/fams/index.html.erb
+++ b/app/views/fams/index.html.erb
@@ -19,7 +19,7 @@
           <p><i class="fas fa-globe-americas"></i> <%= fam.cultural_experience %></p>
         </div>
       </div>
-      <h2 class="card-family-pricing"><%= fam.price %></h2>
+      <p class="card-family-pricing"><%= fam.price %></p>
     </div>
     <% end %>
 <!--   <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1IjoibWFyaWVoZWxsZXIiLCJhIjoiY2syb2txZzNwMHl3dDNibnhmaG5wMTRzZyJ9.e7zokllHBPrHEGthjarzDA'>
