--- a/app/assets/stylesheets/components/_image.scss
+++ b/app/assets/stylesheets/components/_image.scss
@@ -3,3 +3,10 @@
   border-radius: 8px;
   border: 2px solid $orange;
 }
+
+.user-avatar-profile {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+}
