--- a/app/views/fams/index.html.erb
+++ b/app/views/fams/index.html.erb
@@ -26,14 +26,15 @@
     </div>
     <% end %>
   </div>
-  <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1IjoibWFyaWVoZWxsZXIiLCJhIjoiY2syb2txZzNwMHl3dDNibnhmaG5wMTRzZyJ9.e7zokllHBPrHEGthjarzDA'>
-<div
+ <div
   id="map"
   style="width: 100%;
   height: 600px;"
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
+<!--   <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1IjoiaGFtemVhd2F3ZGUiLCJhIjoiY2syeDQ5cW5hMDgzdTNxcWg1cmR2NG1taSJ9.g1q2lUdTSUzUFB1-fie62g'>
+ -->
 </div>
 
 
