--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,6 +7,8 @@
     <p><strong>Number of guests: </strong><%= @booking.number_of_guests %></p>
     <p> <strong>Status of the booking:</strong> <%= @booking.status %></p>
 
+    <%= link_to 'Add a review', new_booking_bookings_review_path(@booking)%>
+
     <img src="https://media2.giphy.com/media/VzQ9PUdifClRm/giphy.gif" alt="Friends">
   </div>
 </div>
