fixed some stuff on the frontend added fonts

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -19,59 +19,58 @@
 .container-index {
   text-align: center;
   color: $blue;
-  background-color: $orange;
   margin: 0px;
 }
 
-.cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px;
-  margin: 15px;
-}
+// .cards {
+//   display: grid;
+//   grid-template-columns: 1fr 1fr 1fr;
+//   grid-gap: 10px;
+//   margin: 15px;
+// }
 
-.card-family {
-  overflow: hidden;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  border-radius: 8px;
-}
+// .card-family {
+//   overflow: hidden;
+//   background: white;
+//   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+//   border-radius: 8px;
+// }
 
-.card-family-image {
-  height: 120px;
-  width: 100%;
-  object-fit: cover;
-}
+// .card-family-image {
+//   height: 120px;
+//   width: 100%;
+//   object-fit: cover;
+// }
 
-.card-family h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
+// .card-family h2 {
+//   font-size: 16px;
+//   font-weight: bold;
+//   margin: 0;
+// }
 
-.card-family p {
-  font-size: 12px;
-  opacity: .7;
-  margin: 0;
-}
+// .card-family p {
+//   font-size: 12px;
+//   opacity: .7;
+//   margin: 0;
+// }
 
 
-.card-family .card-family-info {
-  text-align: left;
-  padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  position: relative;
-}
+// .card-family .card-family-info {
+//   text-align: left;
+//   padding: 16px;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: flex-end;
+//   position: relative;
+// }
 
-.card-family .card-family-pricing {
-  // text-align: right;
-  position: absolute;
-  right: 16px;
-  top: -20px;
-  width: 40px;
-}
+// .card-family .card-family-pricing {
+//   // text-align: right;
+//   position: absolute;
+//   right: 16px;
+//   top: -20px;
+//   width: 40px;
+// }
 
 
 // Smallest device
