--- a/app/assets/stylesheets/components/_polaroids.scss
+++ b/app/assets/stylesheets/components/_polaroids.scss
@@ -20,6 +20,8 @@
 .caption {
   // text-align: center;
   // line-height: 2em;
+  text-decoration: none;
+  color: $blue;
 }
 .item {
   width: 30%;
