--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 
-<div class="home" style="background-image: /*linear-gradient(to right, rgba(42,41, 39, 0.5),rgba(42,41, 39, 0.4)),*/ url(<%= image_path('family_home.jpg') %>)">
+<div class="home" style="background-image: linear-gradient(to right, rgba(42,41, 39, 0.5),rgba(42,41, 39, 0.4)), url(<%= image_path('family_home.jpg') %>)">
   <div class="header ">
+    <h1>Welcome to</h1><h1 class="header-logo"> Family Time</h1>
     <h1>Experience life in a family</h1>
     <h4>Rent your family, feel at home and enjoy your new company</h4>
     </div>
