--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
   <% if user_signed_in? %>
   <div class="d-flex space-around align-items-center">
     <%= link_to "/fams", class: "navbar-brand" do %>
-    <%= image_tag "https://static.thenounproject.com/png/643659-200.png" %>
+      Family Time
     <% end %>
 
 
@@ -31,7 +31,7 @@
 
     <div>
       <%= link_to "/fams", class: "navbar-brand" do %>
-      <%= image_tag "https://static.thenounproject.com/png/643659-200.png" %>
+        Family Time
       <% end %>
     </div>
     <div class="d-flex space-around">
