created update/delete method for fam

--- a/app/views/fams/edit.html.erb
+++ b/app/views/fams/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Fams#edit</h1>
-<p>Find me in app/views/fams/edit.html.erb</p>
+<div class="family">
+<div class = 'container' >
+  <div class="row-family justify-content-center">
+    <div class="form-family col-10 p-3 mt-4 bg-light shadow-sm">
+      <h2>Update your family!</h2>
+      <%= render 'form', fam:@fam %>
+    </div>
+  </div>
+</div>
+</div>
