--- a/app/views/fams/index.html.erb
+++ b/app/views/fams/index.html.erb
@@ -3,32 +3,43 @@
   <h6>We found <%= @fams.length %> families to rent</h6>
 </div>
 
-    <% @fams.each do |fam|  %>
-      <div class="item">
-        <div class="polaroid">
-          <% if fam.pictures.any? %>
-            <%= cl_image_tag fam.pictures.first.photo %>
-          <% else %>
-            <%= image_tag "default_family.jpg" %>
-          <% end %>
-          <div class="caption pt-2">
-            <%= link_to fam_path(fam) do %>
-              <h5><%= fam.name %></h5>
-            <% end %>
-            <p><i class="fas fa-globe-americas"></i> <%= fam.cultural_experience %></p>
-            <p class="text-right m-0"><%= fam.price %> €/night</p>
-          </div>
-        </div>
-      </div>
+<% @fams.each do |fam|  %>
+<div class="item">
+  <div class="polaroid">
+    <% if fam.pictures.any? %>
+    <%= cl_image_tag fam.pictures.first.photo %>
+    <% else %>
+    <%= image_tag "default_family.jpg" %>
     <% end %>
+    <div class="caption pt-2">
+      <%= link_to fam_path(fam) do %>
+      <h5><%= fam.name %></h5>
+      <% end %>
+      <p><i class="fas fa-globe-americas"></i> <%= fam.cultural_experience %></p>
+      <p class="text-right m-0"><%= fam.price %> €/night</p>
+    </div>
+    <% if fam.user == current_user %>
+    <%= link_to fam_path(fam), method: :delete, data: { confirm: 'Are you sure?' } do %>
+    <i class="far fa-trash-alt"></i>
+    <% end %>
+    <% end %>
+    <% if fam.user == current_user %>
+      <%= link_to edit_fam_path(fam) do %>
+        <i class="far fa-edit"></i>
+      <% end %>
+    <% end %>
+  </div>
+</div>
+
+<% end %>
 
 </div>
-  <div
-    id="map"
-    style="width: 100%;
-    height: 600px;"
-    data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-  ></div>
+<div
+id="map"
+style="width: 100%;
+height: 600px;"
+data-markers="<%= @markers.to_json %>"
+data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div>
 </div>
 
