Changes made to styling of profile page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,11 +5,14 @@
 @import "card";
 @import "familyform";
 @import "footer";
+@import "image";
 @import "loginuser";
 @import "navbar";
+@import "profile";
+@import "polaroids";
 @import "signupfamily";
 @import "signupuser";
-@import "image";
-@import "polaroids";
+
+
 
 
