--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,54 +1,72 @@
-<div class="container my-4">
+<div class="profile-page">
+  <h1 class= "profile-header">My Profile</h1>
+  <div class="d-flex">
+  <div class="wrapper">
+    <div class="profile"><%= cl_image_tag @profile.photo %>
+      <div class="profile-caption"><%= @profile.first_name %> <%= @profile.last_name %></div>
+    </div>
+  </div>
+  <p class="profile-text"><%= @profile.description %></p>
+  </div>
+</div>
 
-  <h2>My Profile</h2>
-  <div class="user-card" style="width: 30rem; background-color: white; padding-left: 10px;">
-    <div class="d-flex align-items-center">
-      <%= cl_image_tag @profile.photo, class: "user-avatar-profile" %>
+<!--
+<div class="container my-4">
+  <div class="d-flex">
+    <div>
+    <h2>My Profile</h2>
+    </div>
+    <div class="user-card" style="width: 30rem; background-color: #f2f2f2; padding-left: 10px;">
+      <div class="d-flex align-items-center">
+        <%= cl_image_tag @profile.photo, class: "user-avatar-profile" %>
+
+        <div class="card-body">
+          <h5 class="card-title">Hi my name is <%= @profile.first_name %> <%= @profile.last_name %></h5>
+          <p class="card-text"><%= @profile.description %></p>
+        </div>
+      </div>
+      <ul class="list-inline text-center">
+        <li class="list-inline-item"><i class="fas fa-birthday-cake"></i> I am <%= @profile.age %> old</li>
+        <li class="list-inline-item"><i class="fas fa-globe-americas"></i> I am from <%= @profile.nationality %></li>
+        <li class="list-inline-item"><i class="fas fa-language"></i> I speak <%= @profile.language %></li>
+      </ul>
 
       <div class="card-body">
-        <h5 class="card-title">Hi my name is <%= @profile.first_name %> <%= @profile.last_name %></h5>
-        <p class="card-text"><%= @profile.description %></p>
+        <ul class="list-inline text-center">
+          <% if policy(@profile).update? %>
+          <li class="list-inline-item"><%= link_to "Create Family", new_fam_path, class: "card-link btn btn-primary"%></li>
+          <% end %>
+          <li class="list-inline-item"><%= link_to "Edit my profile", new_fam_path, class: "card-link btn btn-primary"%></li>
+          <li class="list-inline-item"><%= link_to "Delete Profile", new_fam_path, class: "card-link btn btn-primary"%></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <h2>My Fams</h2>
+
+    <% @profile.fams.each do |fam| %>
+    <div class="card" style="width: 30rem;">
+      <% fam.pictures.each do |picture| %>
+      <%= cl_image_tag picture.photo, class: "card-img-top" %>
+      <% end %>
+      <div class="card-body">
+        <h5 class="card-title"><%= fam.name %></h5>
+        <p class="card-text"><%= fam.description %></p>
+      </div>
+
+      <div class="card-body">
+        <% if policy(@profile).update? %>
+        <%= link_to "Show", fam_path(fam), class: "card-link btn btn-primary"%>
+        <%= link_to "Delete", fam_path(fam), method: :delete, class: "card-link btn btn-primary"%>
+        <% end %>
       </div>
     </div>
-    <ul class="list-inline text-center">
-      <li class="list-inline-item"><i class="fas fa-birthday-cake"></i> I am <%= @profile.age %> old</li>
-      <li class="list-inline-item"><i class="fas fa-globe-americas"></i> I am from <%= @profile.nationality %></li>
-      <li class="list-inline-item"><i class="fas fa-language"></i> I speak <%= @profile.language %></li>
-    </ul>
-
-    <div class="card-body">
-      <ul class="list-inline text-center">
-        <% if policy(@profile).update? %>
-          <li class="list-inline-item"><%= link_to "Create Family", new_fam_path, class: "card-link btn btn-primary"%></li>
-        <% end %>
-        <li class="list-inline-item"><%= link_to "Edit my profile", new_fam_path, class: "card-link btn btn-primary"%></li>
-        <li class="list-inline-item"><%= link_to "Delete Profile", new_fam_path, class: "card-link btn btn-primary"%></li>
-      </ul>
-    </div>
-
-  </div>
-
-  <h2>My Fams</h2>
-
-  <% @profile.fams.each do |fam| %>
-  <div class="card" style="width: 30rem;">
-    <% fam.pictures.each do |picture| %>
-    <%= cl_image_tag picture.photo, class: "card-img-top" %>
     <% end %>
-    <div class="card-body">
-      <h5 class="card-title"><%= fam.name %></h5>
-      <p class="card-text"><%= fam.description %></p>
-    </div>
-
-    <div class="card-body">
-      <% if policy(@profile).update? %>
-      <%= link_to "Show", fam_path(fam), class: "card-link btn btn-primary"%>
-      <%= link_to "Delete", fam_path(fam), method: :delete, class: "card-link btn btn-primary"%>
-      <% end %>
-    </div>
   </div>
-  <% end %>
 
+
+<div>
   <h2>Bookings</h2>
 
   <% @profile.booked_families.each do |fam| %>
@@ -69,4 +87,6 @@
     </div>
   </div>
   <% end %>
+  </div>
 </div>
+ -->
