--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -8,7 +8,10 @@
     <p> <strong>Status of the booking:</strong> <%= @booking.status %></p>
 
     <%= link_to 'Add a review', new_booking_bookings_review_path(@booking)%>
-
+    <% if user = current_user %>
+      <%= link_to 'Accept', accept_path(@booking), class: "btn btn-primary"%>
+      <%= link_to 'Decline', decline_path(@booking), class: "btn btn-primary"%>
+    <% end %>
     <img src="https://media2.giphy.com/media/VzQ9PUdifClRm/giphy.gif" alt="Friends">
   </div>
 </div>
